--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js --unhandled-rejections=strict",
+    "refresh-token": "node update-refresh-token.js --unhandled-rejections=strict",
     "setup": "node setup.js --unhandled-rejections=strict",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
