--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "actions-on-google": "^3.0.0",
     "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-oauth-server": "^2.0.0",
     "prompts": "^2.4.2",
